deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: flask-app-container
          image: estebangaray/alta:latest
          ports:
            - containerPort: 5000
              protocol: TCP
